# gem530_term_projects

./: README.md  cutblocks_topo.ipynb  parks_sar.ipynb  petawawa_species.ipynb  pyproject.toml
datasets/cutblocks_topography/: cutblocks_topo.ipynb
datasets/national_parks_sar/: national_parks.ipynb
datasets/petawawa/: petawawa.ipynb
