[project]
name = "term-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

        "geopandas",
        "ipykernel",
        "matplotlib",
        "geodatasets",
        "contextily",
        "pygbif",
        "folium",
        "mapclassify",
        "rasterio",
        "openpyxl",
        "seaborn",

]
